lab5/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘void ac_function(astree*, symbol_table*)’:
3ac.cpp:218:14: warning: unused variable ‘current’ [-Wunused-variable]
   ac3_table *current = table_lookup->find(found)->second;
              ^~~~~~~
3ac.cpp:217:27: warning: unused parameter ‘child’ [-Wunused-parameter]
 void ac_function (astree *child, symbol_table *found){
                           ^~~~~
3ac.cpp: In function ‘void emit_functions(all_tables*, FILE*)’:
3ac.cpp:248:49: error: cannot convert ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>::iterator {aka std::__detail::_Node_iterator<std::pair<const std::__cxx11::basic_string<char>* const, symbol*>, false, false>}’ to ‘symbol*’ in initialization
     symbol *ret = table->global->find(itor.first);
                                                 ^
3ac.cpp:254:31: warning: format ‘%s’ expects argument of type ‘char*’, but argument 3 has type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ [-Wformat=]
     fname, parse_typesize(ret));
                               ^
3ac.cpp:254:31: warning: format ‘%s’ expects argument of type ‘char*’, but argument 4 has type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ [-Wformat=]
Makefile:55: recipe for target '3ac.o' failed
make: *** [3ac.o] Error 1
